# CubeGameClone

./: .gitignore  Cargo.toml  README.md
assets/block/: dirt.block.ron  grass_block.block.ron  oak_planks.block.ron  oak_slab.block.ron  stone.block.ron
assets/model/block/: dirt.model.ron  grass_block.model.ron  oak_planks.model.ron  oak_slab_bottom.model.ron  stone.model.ron
assets/model/block/base/: full.model.ron  slab_bottom.model.ron
assets/shader/: block.wgsl
assets/texture/block/: dirt.ktx2  grass_block_side.ktx2  grass_block_top.ktx2  oak_planks.ktx2  stone.ktx2
src/: asset.rs  chunk.rs  errors.rs  events.rs  main.rs  state.rs
src/asset/: block.rs  material.rs  mod.rs  procedural.rs
src/core/: errors.rs  event.rs  mod.rs  state.rs
src/data/: block.rs
src/math/: block.rs  mod.rs  noise.rs  ray.rs
src/plugin/: init.rs  mod.rs  texture.rs
src/registry/: block.rs  machine.rs  mod.rs
src/render/: block.rs  chunk.rs  chunk_mesh.rs  material.rs  mod.rs
src/render/pipeline/: mod.rs
src/ui/: mod.rs
src/world/: block.rs  cache.rs  camera.rs  chunk.rs  generation.rs  machine.rs  mod.rs  player.rs  source.rs
