[package]
name = "GTClone"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.0", features = ["dynamic_linking"] }
bimap = { version = "0.6.3", features = ["serde"] }
bitvec = "1.0.1"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
thiserror = "2.0.12"



# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3


# LLD or Windows
[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"
