[package]
name = "GTClone"
version = "0.1.0"
edition = "2024"

[dependencies]
arc-swap = "1.7.1"
bevy = { version = "0.17.2" }
bimap = { version = "0.6.3", features = ["serde"] }
lru = "0.16.2"
noiz = "0.3.0"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
thiserror = "2.0.12"



# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

[profile.release]
debug = true

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3


# LLD or Windows
[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"
